<resources>
    <string name="app_name">NWC</string>
    <string name="username">username / اسم المستخدم</string>
    <string name="password">password / كلمة المرور</string>
    <string name="remember_me">Remember me / تذكرني</string>
    <string name="login_to_nwc">Login to NWC / الدخول لنظام شركة المياه</string>
    <string name="change_password">Change password / تغيير كلمة المرور</string>
    <string name="new_password">New password / كلمة مرور جديدة</string>
    <string name="confirm_new_password">Confirm new password / تأكيد كلمة المرور الجديدة</string>
    <string name="min_6">Minimum length is 6 characters / طول الحد الأدنى هو 6 أحرف</string>
    <string name="pass_not_match">New password doesn\'t match confirm password / كلمة المرور الجديدة لا يطابق تأكيد كلمة المرور</string>
    <string name="require_connection">Application requires internet connection! / يحتاج البرنامج للوصول للانترنت ليعمل بشكل صحيح!</string>
    <string name="settings">Settings / إعدادات</string>
    <string name="close">Close / إغلاق</string>
     <string name="area_name">Area name / إسم الحي</string>
    <string name="login_successfull">Login successfull / تم الدخول</string>
    <string name="login_failed">Login failed. Please check your data! / تعثر دخولك للنظام. الرجاء التأكد من بياناتك!</string>
    <string name="contacting_server">Contacting server... / ... الدخول على النظام</string>
    <string name="premise_form">Premise form / نموذج المسكن</string>
    <string name="customer_form">Customer form / نموذج المالك</string>
    <string name="logout">Logout / الخروج </string>
    <string name="sync">Start Sync / تزامن</string>
    <string name="welcome">Welcome / مرحبا</string>
    <string name="owner">Owner / المالك</string>
    <string name="owner_info">Owner information / معلومات المالك</string>
    <string name="house_conn_num">House connection number / رقم الحصر </string>
    <string name="full_name">Full name / الاسم الكامل</string>
    <string name="national_id">National ID / رقم الهوية</string>
    <string name="id_expir_date">ID expiration date / تاريخ صلاحية الهوية</string>
    <string name="gender">Gender / الجنس </string>
    <string name="nationality">Nationality / الجنسية</string>
    <string name="email">Email / البريد الالكتروني</string>
    <string name="phone_land_line">Phone land line / رقم الهاتف</string>
    <string name="mobile_phone">Mobile phone / رقم الجوال</string>
    <string name="po_box">PO Box / رقم صندوق البريد</string>
    <string name="zip_code">Zip Code / الرمز البريدي</string>
    <string name="land_id">Land ID / رقم الارض</string>
    <string name="alternate_contact_info">Alternate Contact information / معلومات الاتصال البديل</string>
    <string name="alternate_contact_name">Alternate contact name / اسم الشخص البديل</string>
    <string name="contact_national_id">Contact national ID / رقم الهوية</string>
    <string name="contact_id_expir_date">Contact ID expiration date / تاريخ صلاحية الهوية</string>
    <string name="inhabitant_type">Inhabitant type / نوع علاقة الشخص البديل</string>
    <string name="contact_phone_land">Contact Phone land line / رقم الهاتف</string>
    <string name="contact_mobile_phone">Contact mobile phone / رقم الجوال</string>
    <string name="contact_email">Contact email / البريد الالكتروني</string>
    <string name="tarsheed_type">Tarsheed type / أدوات ترشيد</string>
    <string name="tarsheed_given">Tarsheed given / تم تسليم ادوات ترشيد</string>
    <string name="submit_form">Submit form to server / التحميل من و الى النظام</string>
    <string name="premise_connection">Premise Connection / رقم عداد المياه</string>
    <string name="instrument">Instrument / أداة</string>
    <string name="STC">STC / بكسية الاتصالات</string>
    <string name="SEC">SEC / عداد الكهرباء</string>
    <string name="premise_type">Premise type / نوع المنزل</string>
    <string name="premise_id">Premise id / رقم المنزل</string>
    <string name="stc_db_um">STC db number / رقم بكسية الاتصالات</string>
    <string name="sec_db_num">SEC db number / رقم عداد الكهرباء</string>
    <string name="total_electrical_meters">Total Electrical Meters / عدد عدادات الكهرباء</string>
    <string name="floor_count">Floor Count / عدد طوابق المبني</string>
    <string name="premise_name">Premise Name /  أسم المبنى</string>
     <string name="enableForm">Enter house connection number manually</string>
    <string name="use_of_building">Use of building / استخدامات المبنى</string>
    <string name="premise_latitude">Premise Latitude / خط الطول</string>
    <string name="premise_longitude">Premise Longitude / خط العرض</string>
    <string name="not_set">not set / لم يتم الاعداد</string>
    <string name="get_location_map">Get location(MAP) / الحصول على الموقع</string>
    <string name="get_location">Get location / الحصول على الموقع</string>
    <string name="submit_form_data">Submit Form Data / تحميل النموذج</string>
    <string name="field_required">Field is required / الخانة الزامية</string>
    <string name="error_photos">Error: Photos not set / خطأ: الصورة لم تجهز</string>
    <string name="photos_required">photos are required! / ـــــــــــــــــــــ الصور مطلوبة!</string>
    <string name="set_premise_location">Set Premise Location / تحديد موقع المنزل</string>
    <string name="error_location_not_set">Error: Location not set / خطأ: لم يتم تحديد موقع المنزل</string>
    <string name="please_click_locate">PLease click on LOCATE ME button and wait until your location is determined! / الرجاء الضغط على ايقونة حدد موقعي و انتظر حتى يتم تحديد موقعك!</string>
    <string name="location_service_unavailable">Location services unavailable.PLease enable GPS or find better view of sky! / لا يمكن تحديد الموقع. الرجاء تفعيل خدمة تحديد المواقع أو التواجد في مكان مكشوف للسماء!</string>
    <string name="location_acquired">Location acquired! / تم تحديد الموقع! </string>
    <string name="please_click_get_location">Please click on GET LOCATION to define premise location! / الرجاء الضغط على الحصول على الموقع لتحديد الموقع!</string>
    <string name="errors">Errors / خطأ</string>
    <string name="success">Success / تمت</string>
    <string name="form_succ_saved">Form successfully saved / تم حفظ النموذج بنجاح</string>
    <string name="OK">OK / موافق</string>
    <string name="sending">Sending... / ... إرسال</string>
    <string name="getting_gps">Getting GPS location... / ... الحصول على إحداثيات الموقع</string>
    <string name="remote_service_started">NWC Sync service started</string>
    <string name="remote_service_stopped">NWC Sync service stopped</string>
    <string name="remote_service_label">NWC Sync service</string>
    <string name="photo_house1">House1 / صورة المنزل</string>
    <string name="photo_house2">House2 / صورة المنزل الثانية</string>
    <string name="photo_house3">House3 / صورة المنزل الثالثة</string>
    <string name="photo_premise_conn">Premise conn. / صورة عداد المياه</string>
    <string name="photo_instrument">Instrument / صورة الصك</string>
    <string name="photo_stc">STC / &#1593;&#1604;&#1576;&#1577;&#1575;&#1604;&#1578;&#1604;&#1601;&#1608;&#1606;</string>
    <string name="photo_sec">SEC / &#1593;&#1583;&#1575;&#1583;&#1575;&#1604;&#1603;&#1607;&#1585;&#1576;&#1575;&#1569;</string>
    <string name="photo_owner">Owner ID photo / صورة هوية المالك أو المستأجر</string>
    <string name="photo_alternate">Alternate Contact / الاتصال البديلة</string>
    <string name="water_meter_number">Water Meter Number /  رقم عداد المياه</string>
    <string name="new_update_sync_first">1.	New update has been posted (Version 3333). To allow download please SYNC ALL ITEMS and restart the application! / تم نشر تحديث جديد ( نسخة 3333) . للسماح بالتحميل يرجى مزامنة جميع العناصر و إعادة تشغيل التطبيق  </string>
	<string name="new_update">New update has been posted (Version 3333). Please download and install the latest app version! / نشر تحديث جديد ( نسخة 3333) . يرجى تحميل وتثبيت الإصدار الأحدث للتطبيق </string>
	<string name="search">Search database / البحث في قاعدة البيانات</string>
	<string name="known">Known / معروف</string>
	<string name="unknown">Unknown / غير معروف</string>
	<string name="district">District / الأحياء</string>
	<string name="hcn_known_error">If house connection number is known, you must enter it in! / اذا كان رقم الحصر للمنزل معروف فلابد من أدخاله</string>
	<string name="hcn_unknown_error">If house connection number is unknown, you must select a district! / اذا لم يكن رقم الحصر للمنزل معروف أو ظاهر لا بد من اختيار الحي </string>
	<string name="hcn_error">You must select if house connection number is known or unknown! / يجب أختيار رقم الحصر للمنزل اذا كان رقم الحصر معروف أو غير معروف</string>
	<string name="premise_search">Premise search / البحث عن السكن أو العمارة</string>
	<string name="premise_found">Premise found / العثور على السكن أو العمارة</string>
	<string name="premise_not_found">Premise not found / لم يتم العثور على السكن أو العمارة</string>
	<string name="premise_found_big">Premise has been found and available fields are automatically filled! / تم العثور على السكن أو العمارة وتم ملء الحقل تلقائيا</string>
	<string name="premise_not_found_big">Premise with provided search criteria wasn\'t found. Input form has been enabled! / لم يتم العثور على السكن أو العمارة مع معايير البحث المقدمة . تم تمكين نموذج الإدخال</string>
	<string name="error_enter_search">You must enter house connection number or water meter number for search / يجب ان تدخل رقم الحصر او رقم العداد لتتم عملية البحث</string>
	<string name="enable_form">Enable form without search / تمكين النموذج بدون البحث</string>
	<string name="reserve_hcn">Get new house connection number / الحصول على رقم حصر جديد</string>
	<string name="hcn_generated">House connection number generated / توليد رقم حصر </string>
	<string name="error_hcn_reservation_validate">If house connection number is unknown you must select a district and click GET NEW HOUSE CONNECTION NUMBER button / اذا كان رقم الحصر غير معروف يجب ان تختار الحي ومن ثم تضغط على زر الحصول على رقم حصر جديد</string>
	<string name="wmn_error">You must select if water meter number is known or unknown / يجب الاختيار اذا كان رقم العداد معروف او غير معروف</string>
	<string name="wmn_known_error">If water meter number is known, you must enter it in! / إذا كان رقم العداد معروف ، يجب أن يتم إدخالة  </string>
	<string name="wmn_unknown_error">If water meter number is unknown, you must select water meter status! / أذا كان رقم العداد غير معروف. يجب أختيار الحالة </string>
	<string name="new_version_required_sync">You must sync all items and install new version! / يجب ان تختار تزامن و تثبيت الإصدار الجديد</string>
	<string name="new_version_required">You must install new version! / يجب تثبيت الإصدار الجديد</string>
	<string name="water_meter_status">Water meter status / حالة رقم العداد </string>
	<string name="customer_found">Customer found / تم العثور على العميل </string>
	<string name="customer_found_big">Customer has been found and available fields are automatically filled! / تم العثور على العميل وتم ملء الحقول المتوفرة تلقائيا</string>
	<string name="customer_not_found">Customer not found / لم يتم العثور على العميل </string>
	<string name="customer_not_validated">This Premise is already collected / تم مسبقا أخذ بيانات المسكن </string>
	<string name="type">Type / النوع </string>
	<string name="rejected_hcn">HCN / رقم الحصر  </string>
	<string name="rejected_wmn">WMN / رقم عداد المياه </string>
	<string name="rejected_reason">Reason / سبب الرفض </string>
	<string name="edit">Edit / تحرير </string>
	<string name="map">Map / الموقع على الخريطه </string>
	<string name="contact_street_name">Contact street name / الاتصال اسم الشارع</string>
	<string name="contact_zip_code">Contact ZIP code / الاتصال الرمز البريدي</string>
	<string name="contact_po_box">Contact PO BOX  </string>
	<string name="contact_name">Contact name / اسم جهة الاتصال </string>
</resources>